Fix issue #3164: Squishing of build-step output
This fixes issue #3164

--- a/web/assets/css/production.less
+++ b/web/assets/css/production.less
@@ -232,6 +232,11 @@ li.prep-status {
   line-height: 28px;
 }
 
+.step-body .dictionary {
+  table-layout: fixed;
+  width: 50%;
+}
+
 .dict-key {
   text-align: right;
   padding: 0 10px 0 0;
